syntax = "proto3";
package api;
option go_package = "./api-go;api";
import "stats.messages.proto";

service StatisticsService {
  rpc GetStream(StatisticsStreamRequest) returns (stream StatisticsStreamResponse);
  rpc GetTraces(StatisticsGetTracesRequest) returns (StatisticsGetTracesResponse);

  rpc QueryMetric(QueryMetricRequest) returns (QueryMetricResponse);

  // GetProjectSummary returns aggregated summary of all metrics for a project
  rpc GetProjectSummary(GetProjectSummaryRequest) returns (GetProjectSummaryResponse);
  // GetAvailableFlows returns list of flows for a project
  rpc GetAvailableFlows(GetAvailableFlowsRequest) returns (GetAvailableFlowsResponse);

  // GetAvailableMetrics returns list of available metrics for a project/flow
  rpc GetAvailableMetrics(GetAvailableMetricsRequest) returns (GetAvailableMetricsResponse);

  // GetTraceByID returns complete trace information including all spans by trace ID
  rpc GetTraceByID(GetTraceByIDRequest) returns (GetTraceByIDResponse);
}
